corrected AdService Tests to verify the actual service methods' logic and not the repository's respone